# uni

./: 5prova.md  6prova.md  Algebra10.md  Cheat sheet PS.md  D.md  Es.md  Esami PS.md  Esercizio pazzo.md  Perle di programmazione.md  README.md  Tasks.md  snippets.json  tmp.sml  todo.md
#Excalidraw/: Drawing 2024-11-06 11.38.02.excalidraw.md  Drawing 2024-11-08 08.52.29.excalidraw.md  Drawing 2024-11-08 09.34.03.excalidraw.md
.obsidian/: app.json  appearance.json  community-plugins.json  workspace.json
Calcolatori/: Calcolatori.md  Esercizi01.md  Lezione01.md  cpu  memoria  pipeline  toolchain.md
DB/: 01BasiDiDati.md  02ModelloRelazionale.md  03AlgebraRelazionale.md  04SQL.md
DSA/: Esercizi.md  Esercizio pazzo.md
Database/: 02ModelloRelazionale.md  Lezione01.md
Excalidraw/: Algebra19.md  Algebra24.md  AlgebraE4.md  AnalisiE10.md  AnalisiT8A.md  Drawing 2024-10-15 11.43.09.excalidraw.md  Drawing 2024-10-18 08.36.53.excalidraw.md  Drawing 2024-10-22 10.36.09.excalidraw.md  Drawing 2024-10-22 11.06.55.excalidraw.md  Drawing 2024-10-22 11.17.02.excalidraw.md  Drawing 2024-10-23 11.35.37.excalidraw.md  Drawing 2024-11-05 12.48.49.excalidraw.md  Drawing 2024-11-08 09.46.50.excalidraw.md  Drawing 2024-11-19 15.40.04.excalidraw.md  Drawing 2024-11-20 12.55.47.excalidraw.md  Drawing 2024-11-22 10.41.00.excalidraw.md  Drawing 2024-11-22 11.55.32.excalidraw.md  Drawing 2024-11-27 11.40.18.excalidraw.md  Drawing 2024-11-28 13.35.31.excalidraw.md  EsAlgebra.md  Esercitazione7.md  (+8 more)
laboratorio/lab/lab01/: CMakeLists.txt
laboratorio/teoria06/: CMakeLists.txt  es05.cpp
(+864 files in other folders)
