project(global)
# add_library(array ../Array/array.cpp)

add_executable(es01 es01.cpp)
add_executable(es02 es02.cpp)
add_executable(es03 es03.cpp)
add_executable(es04 es04.cpp)
add_executable(es05 es05.cpp)
add_executable(es06 es06.cpp)
add_executable(es07 es07.cpp)

# target_include_directories(es01 PUBLIC "../Array")
# target_link_libraries(es01 array)
